--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   },
   "homepage": "https://github.com/JoeBarbone/c-w12-employee-tracker#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "express": "^4.18.1",
-    "inquirer": "^6.5.0",
+    "inquirer": "^6.5.2",
     "mysql2": "^2.3.3"
   }
 }
